# sniproxy-ng

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  PROJECT_STATUS.md  README.md  config.toml.example  flake.nix  release-assets.json  test_quic_sni.sh
.github/workflows/: build.yml  docker.yml
docs/: 2026-01-08-domain-whitelist-design.md  CONNECTION_POOL_AND_ROUTING.md  DNS_RESOLUTION.md  GEMINI_CODE_REVIEW.md  GEMINI_QUIC_SNI_EVALUATION.md  NGINX_QUIC_SNI_ANALYSIS.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUIC_IMPLEMENTATION_NOTES.md  QUIC_SNI_EXTRACTION_FEASIBILITY.md  QUIC_SNI_IMPLEMENTATION_RESEARCH.md  QUIC_SNI_PROBLEM_ANALYSIS.md  SNI_PARSING_FLOW.md  TCP_VS_QUIC_SNI_EXTRACTION.md  TESTING_GUIDE.md  TLS_SNI_EXPLANATION.md  TLS_SNI_IMPLEMENTATION_SUMMARY.md  sni_test_data.py  test_sni_simple.py
docs/plans/: 2025-01-09-http-proxy-design.md
nix/: module.nix  package.nix
scripts/: update-release-assets.py
src/: config.rs  lib.rs  main.rs  relay.rs  router.rs
src/http/: error.rs  mod.rs  parser.rs  tests.rs
src/quic/: crypto.rs  decrypt.rs  error.rs  header.rs  mod.rs  parser.rs  session.rs
src/socks5/: client.rs  mod.rs  pool.rs  udp.rs
src/tcp/: mod.rs  tests.rs
src/tls/: mod.rs  sni.rs
tests/: chatgpt_tcp_e2e.sh  http3_test.sh  quic_integration_test.rs  test.sh
