[package]
name = "sniproxy-ng"
version = "0.1.0"
edition = "2021"
description = "A SNI proxy server supporting QUIC/HTTP3 and HTTP/1.1 with SOCKS5 backend"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# SOCKS5 代理
fast-socks5 = "0.9"

# TLS 库 - 用于解析 SNI
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.1"

# QUIC 协议栈
quinn = "0.11"

# 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 工具库
bytes = "1.7"
thiserror = "1.0"
anyhow = "1.0"

# 网络工具
socket2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
